--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ h1 {
     text-align: center;
     font-size: 75px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-image: linear-gradient(green, lightgreen);
 }
 
 h1:hover {
@@ -34,9 +35,10 @@ h2 {
 
 p {
     text-indent: 10%;
+    text-align: justify;
     margin: auto;
     width: auto;
-    padding: 20px 30% 20px 30%;
+    padding: 10px 25% 20px 25%;
     font-size: larger;
 }
 
